tests/security-fixtures/opengrep/negative/javascript.js
function synthetic(input) { return JSON.parse(input); }
